# VidSplit

./: .gitignore  Inno_setup.iss  README.md  main.py  pyproject.toml  setup.py
Resources/: resources.qrc
UI/: VideSplit.ui  ui_Video_Splitter.py
Widgets/: PaintVideo.py  VideoPlayer.py
