[project]
name = "VidSplit"
version = "0.1.0"
description = "A program designed for splitting videos into smaller clips"
readme = "README.md"
authors = [
    { name = "Alex Kussauer", email = "akussauer@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cx-freeze>=8.5.3",
    "opencv-python>=4.12.0.88",
    "pyside6>=6.10.1",
]
